--- a/#src/style/scss/header/_style_header.scss
+++ b/#src/style/scss/header/_style_header.scss
@@ -29,7 +29,8 @@ body._lock {
 
 .header__container {
   max-width: var(--header-width-container);
-  margin: 0 66px 0 76px;
+  margin: 0 100px;
+  padding: 44px 0;
   display: flex;
   justify-content: space-between;
   min-height: 100px;
@@ -102,11 +103,9 @@ body._lock {
   align-content: space-between;
 
   @media (max-width: 1399px) {
-    grid-template-areas: "menu__nav menu__list-link-login menu__list-link-log-up";
   }
 
   @media (max-width: 1699px) {
-    grid-template-areas: "menu__nav log-in-out";
   }
 }
 
@@ -114,13 +113,11 @@ body._lock {
   display: flex;
   width: 100%;
   grid-area: menu__nav;
-  justify-content: center;
+  justify-content: flex-end;
   @media (max-width: 1399px) {
-    width: 100%;
   }
 
   @media (max-width: 1199px) {
-    width: 100%;
   }
 }
 
@@ -128,38 +125,36 @@ body._lock {
   position: relative;
   height: 20px;
   text-align: center;
-
   @media (max-width: 1199px) {
-    text-align: center;
   }
 }
 
 .menu__list {
   display: flex;
-  column-gap: 30px;
+  column-gap: 80px;
   justify-content: space-between;
 
   @media (max-width: 1199px) {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    row-gap: 18px;
+  
   }
 }
 
-.menu__list-link-1,
-.menu__list-link-2,
-.menu__list-link-3,
-.menu__list-link-4,
-.menu__list-link-5,
-.menu__list-link-6,
-.menu__list-link-7,
-.menu__list-link-8 {
-  @media (max-width: 1199px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
+.menu__list-link:hover::after {
+  content: "";
+  display: block;
+  background-color: #c4c4c4;
+  width: 35px;
+  height: 4px;
+  border-radius: 100px;
+}
+
+.log-in-out {
+  column-gap: 25px;
+  width: 100%;
+  display: flex;
+  grid-area: log-in-out;
+  align-items: center;
+  justify-content: center;
 }
 
 .menu__list-link-login {
@@ -173,35 +168,6 @@ body._lock {
   @media (max-width: 1399px) {
     justify-content: center;
     align-items: center;
-  }
-}
-.log-in-out {
-  width: 100%;
-  display: flex;
-  grid-area: log-in-out;
-  align-items: center;
-  justify-content: center;
-}
-.menu__list-link-sign-up {
-  width: 100px;
-  display: flex;
-  align-items: flex-end;
-  height: 100%;
-  justify-content: flex-end;
-
-  @media (max-width: 1399px) {
-    justify-content: center;
-    align-items: center;
-  }
-}
-
-.menu__list-link-button-1 {
-  grid-area: menu__list-link-button-1;
-  display: flex;
-  justify-content: flex-end;
-
-  @media (max-width: 1399px) {
-    justify-content: center;
   }
 }
 
@@ -227,35 +193,26 @@ body._lock {
     }
   }
 }
-.menu__list-link:hover::after {
-  content: "";
-  display: block;
-  background-color: #c4c4c4;
 
-  width: 35px;
-  height: 4px;
-
-  border-radius: 100px;
-}
-.menu__list-link-button-2 {
+.menu__list-link-sign-up {
+  width: 128px;
+  height: 49px;
   display: flex;
-  grid-area: menu__list-link-button-2;
-  justify-content: flex-end;
-
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #fff;
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 44px;
   @media (max-width: 1399px) {
-    justify-content: center;
   }
 }
 
 .menu__sign-up {
-    display: flex;
-    color: #fff;
-    width: 128px;
-    height: 49px;
-    background: linear-gradient(129.54deg,#ff7b4e 15.57%,#ff584e 95.03%),#fff;
-    border-radius: 100px;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  color: #fff;
+
+  align-items: center;
+  justify-content: center;
   &:hover {
     color: #000;
   }
@@ -273,73 +230,6 @@ body._lock {
     &:hover {
       color: #333 !important;
     }
-  }
-}
-
-.menu__button-1 {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  background: #000;
-  border-radius: 5px;
-  width: 220px;
-  height: 48px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #fff;
-
-  &:hover {
-    background: #cd1319;
-  }
-  @media (max-width: 1199px) {
-    width: 100%;
-  }
-
-  @media (min-width: 1200px) and (max-width: 1399px) {
-    font-size: 13px;
-  }
-
-  @media (min-width: 1400px) and (max-width: 1799px) {
-    font-size: 13px;
-  }
-}
-
-.menu__button-2 {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #ec0f16;
-  background: #fff;
-  border-radius: 5px;
-  width: 220px;
-  height: 48px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #ec0f16;
-
-  &:hover {
-    border: 1px solid #cd1319;
-    color: #cd1319;
-  }
-
-  @media (max-width: 1199px) {
-    width: 100%;
-  }
-
-  @media (min-width: 1200px) and (max-width: 1399px) {
-    font-size: 13px;
-  }
-
-  @media (min-width: 1400px) and (max-width: 1799px) {
-    font-size: 13px;
   }
 }
 
