--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -23,7 +23,7 @@ body {
   background-color: #000000;
 }
 * {
-  font-family: Montserrat;
+  font-family: Poppins;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -71,17 +71,22 @@ body {
 }
 
 .main_bg {
-  width: 100%;
+  width: 1440px;
   background-image: url(../../img/index/main-bg.png);
+  background-repeat: no-repeat;
   height: 100vh;
+  position: absolute;
+  z-index: 2;
 }
 
 @import "_vars";
 @import "header/_style_header";
 
 .main2 {
-  padding: 20px 75px;
+  padding: 41px 100px;
   display: flex;
+  position: absolute;
+  z-index: 3;
 }
 .main {
   &__info {
@@ -98,15 +103,19 @@ body {
     border-radius: 15px;
     align-items: center;
     justify-content: center;
+    font-weight: 500;
+    font-size: 18px;
+    line-height: 27px;
   }
   &__title {
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
     font-size: 55px;
-    line-height: 82px;
-
-    color: #ffffff;
+    line-height: 82.5px;
+    color: #fff;
+    margin-top: 8px;
+    letter-spacing: 1.5px;
   }
   &__sup-title {
     font-family: Poppins;
@@ -114,31 +123,108 @@ body {
     font-weight: 500;
     font-size: 25px;
     line-height: 37px;
-
-    color: #ffffff;
+    color: #fff;
     opacity: 0.5;
+    margin-top: 32px;
+    letter-spacing: 0.9px;
   }
 
   &__button {
-        display: flex;
+    display: flex;
     width: 263px;
     height: 91px;
-    background: linear-gradient(129.54deg,#ff7b4e 15.57%,#ff584e 95.03%);
+    background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%);
     border-radius: 27px;
     align-items: center;
     justify-content: center;
     margin-top: 68px;
-    & a{
+    & a {
       font-family: Poppins;
-font-style: normal;
-font-weight: 600;
-font-size: 25px;
-line-height: 37px;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 25px;
+      line-height: 37px;
 
-
-color: #FEFEFE;
+      color: #fefefe;
     }
   }
 }
 .main-photo {
+  position: absolute;
+  top: 0;
+  left: 450px;
+  z-index: 1;
+  background-image: url(../../img/index/main_man.png);
+  height: 99%;
+  width: 65%;
+  background-repeat: no-repeat;
+
+  background: 50% 0;
+}
+
+.slider {
+  &__info {
+    flex: 0 0 60%;
+  }
+  &__container {
+        display: flex;
+    background-color: #e5e5e5;
+    padding: 0 100px;
+    padding-bottom: 100px;
+  }
+}
+
+.info {
+  flex: 0 0 40%;
+  &__title {
+       display: flex;
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 30px;
+    line-height: 45px;
+    color: #0f1f1c;
+    flex-direction: column;
+    margin-top: 123px;
+  }
+
+  &__title-span {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 600;
+    font-size: 55px;
+    line-height: 82px;
+    color: #0f1f1c;
+    letter-spacing: 1px;
+  }
+
+  &__sup-title {
+       font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 37px;
+    color: #0f1f1c;
+    opacity: .5;
+    margin-top: 17px;
+    letter-spacing: 0px;
+  }
+  &__button {
+    display: flex;
+    width: 223px;
+    height: 79px;
+    background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%);
+    border-radius: 27px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 61px;
+    & a {
+     font-family: Poppins;
+font-style: normal;
+font-weight: 600;
+font-size: 20px;
+line-height: 30px;
+color: #FEFEFE;
+    }
+  }
 }
