--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -159,7 +159,7 @@ body {
 }
 
 * {
-  font-family: Montserrat;
+  font-family: Poppins;
   font-style: normal;
   font-weight: 400;
   font-size: 17px;
@@ -203,9 +203,12 @@ body {
 }
 
 .main_bg {
-  width: 100%;
+  width: 1440px;
   background-image: url(../../img/index/main-bg.png);
+  background-repeat: no-repeat;
   height: 100vh;
+  position: absolute;
+  z-index: 2;
 }
 
 :root {
@@ -254,7 +257,8 @@ body._lock {
 
 .header__container {
   max-width: var(--header-width-container);
-  margin: 0 66px 0 76px;
+  margin: 0 100px;
+  padding: 44px 0;
   display: flex;
   justify-content: space-between;
   min-height: 100px;
@@ -318,7 +322,7 @@ body._lock {
   display: flex;
   width: 100%;
   grid-area: menu__nav;
-  justify-content: center;
+  justify-content: flex-end;
 }
 
 .menu__list > li {
@@ -329,48 +333,9 @@ body._lock {
 
 .menu__list {
   display: flex;
-  -moz-column-gap: 30px;
-  column-gap: 30px;
+  -moz-column-gap: 80px;
+  column-gap: 80px;
   justify-content: space-between;
-}
-
-.menu__list-link-login {
-  grid-area: menu__list-link-login;
-  display: flex;
-  align-items: flex-end;
-  width: 100%;
-  height: 100%;
-  justify-content: flex-end;
-}
-
-.log-in-out {
-  width: 100%;
-  display: flex;
-  grid-area: log-in-out;
-  align-items: center;
-  justify-content: center;
-}
-
-.menu__list-link-sign-up {
-  width: 100px;
-  display: flex;
-  align-items: flex-end;
-  height: 100%;
-  justify-content: flex-end;
-}
-
-.menu__list-link-button-1 {
-  grid-area: menu__list-link-button-1;
-  display: flex;
-  justify-content: flex-end;
-}
-
-.menu__login {
-  color: #fff;
-}
-
-.menu__login:hover {
-  color: #000;
 }
 
 .menu__list-link:hover::after {
@@ -382,69 +347,53 @@ body._lock {
   border-radius: 100px;
 }
 
-.menu__list-link-button-2 {
+.log-in-out {
+  -moz-column-gap: 25px;
+  column-gap: 25px;
+  width: 100%;
   display: flex;
-  grid-area: menu__list-link-button-2;
+  grid-area: log-in-out;
+  align-items: center;
+  justify-content: center;
+}
+
+.menu__list-link-login {
+  grid-area: menu__list-link-login;
+  display: flex;
+  align-items: flex-end;
+  width: 100%;
+  height: 100%;
   justify-content: flex-end;
+}
+
+.menu__login {
+  color: #fff;
+}
+
+.menu__login:hover {
+  color: #000;
+}
+
+.menu__list-link-sign-up {
+  width: 128px;
+  height: 49px;
+  display: flex;
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #fff;
+  border-radius: 100px;
+  justify-content: center;
+  align-items: center;
+  padding: 0 44px;
 }
 
 .menu__sign-up {
   display: flex;
   color: #fff;
-  width: 128px;
-  height: 49px;
-  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #fff;
-  border-radius: 100px;
   align-items: center;
   justify-content: center;
 }
 
 .menu__sign-up:hover {
   color: #000;
-}
-
-.menu__button-1 {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  background: #000;
-  border-radius: 5px;
-  width: 220px;
-  height: 48px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #fff;
-}
-
-.menu__button-1:hover {
-  background: #cd1319;
-}
-
-.menu__button-2 {
-  display: inline-flex;
-  align-items: center;
-  justify-content: center;
-  border: 1px solid #ec0f16;
-  background: #fff;
-  border-radius: 5px;
-  width: 220px;
-  height: 48px;
-  font-family: Poppins;
-  font-style: normal;
-  font-weight: 600;
-  font-size: 15px;
-  line-height: 18px;
-  text-align: center;
-  color: #ec0f16;
-}
-
-.menu__button-2:hover {
-  border: 1px solid #cd1319;
-  color: #cd1319;
 }
 
 .menu__link {
@@ -456,8 +405,10 @@ body._lock {
 }
 
 .main2 {
-  padding: 20px 75px;
+  padding: 41px 100px;
   display: flex;
+  position: absolute;
+  z-index: 3;
 }
 
 .main__info {
@@ -474,6 +425,9 @@ body._lock {
   border-radius: 15px;
   align-items: center;
   justify-content: center;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 27px;
 }
 
 .main__title {
@@ -481,8 +435,10 @@ body._lock {
   font-style: normal;
   font-weight: 600;
   font-size: 55px;
-  line-height: 82px;
-  color: #ffffff;
+  line-height: 82.5px;
+  color: #fff;
+  margin-top: 8px;
+  letter-spacing: 1.5px;
 }
 
 .main__sup-title {
@@ -491,8 +447,10 @@ body._lock {
   font-weight: 500;
   font-size: 25px;
   line-height: 37px;
-  color: #ffffff;
+  color: #fff;
   opacity: 0.5;
+  margin-top: 32px;
+  letter-spacing: 0.9px;
 }
 
 .main__button {
@@ -512,74 +470,100 @@ body._lock {
   font-weight: 600;
   font-size: 25px;
   line-height: 37px;
+  color: #fefefe;
+}
+
+.main-photo {
+  position: absolute;
+  top: 0;
+  left: 450px;
+  z-index: 1;
+  background-image: url(../../img/index/main_man.png);
+  height: 99%;
+  width: 65%;
+  background-repeat: no-repeat;
+  background: 50% 0;
+}
+
+.slider__info {
+  flex: 0 0 60%;
+}
+
+.slider__container {
+  display: flex;
+  background-color: #e5e5e5;
+  padding: 0 100px;
+  padding-bottom: 100px;
+}
+
+.info {
+  flex: 0 0 40%;
+}
+
+.info__title {
+  display: flex;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 30px;
+  line-height: 45px;
+  color: #0f1f1c;
+  flex-direction: column;
+  margin-top: 123px;
+}
+
+.info__title-span {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 55px;
+  line-height: 82px;
+  color: #0f1f1c;
+  letter-spacing: 1px;
+}
+
+.info__sup-title {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 25px;
+  line-height: 37px;
+  color: #0f1f1c;
+  opacity: .5;
+  margin-top: 17px;
+  letter-spacing: 0px;
+}
+
+.info__button {
+  display: flex;
+  width: 223px;
+  height: 79px;
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%);
+  border-radius: 27px;
+  align-items: center;
+  justify-content: center;
+  margin-top: 61px;
+}
+
+.info__button a {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 20px;
+  line-height: 30px;
   color: #FEFEFE;
 }
 
-@media (max-width: 1699px) {
-  .menu__body {
-    grid-template-areas: "menu__nav log-in-out";
-  }
-}
-
 @media (max-width: 1399px) {
-  .menu__body {
-    grid-template-areas: "menu__nav menu__list-link-login menu__list-link-log-up";
-  }
-
-  .menu__nav {
-    width: 100%;
-  }
-
   .menu__list-link-login {
     justify-content: center;
     align-items: center;
-  }
-
-  .menu__list-link-sign-up {
-    justify-content: center;
-    align-items: center;
-  }
-
-  .menu__list-link-button-1 {
-    justify-content: center;
-  }
-
-  .menu__list-link-button-2 {
-    justify-content: center;
   }
 }
 
 @media (max-width: 1199px) {
   .header {
     position: fixed;
-  }
-
-  .menu__nav {
-    width: 100%;
-  }
-
-  .menu__list > li {
-    text-align: center;
-  }
-
-  .menu__list {
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    row-gap: 18px;
-  }
-
-  .menu__list-link-1,
-  .menu__list-link-2,
-  .menu__list-link-3,
-  .menu__list-link-4,
-  .menu__list-link-5,
-  .menu__list-link-6,
-  .menu__list-link-7,
-  .menu__list-link-8 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
   }
 
   .menu__login {
@@ -610,14 +594,6 @@ body._lock {
 
   .menu__sign-up:hover {
     color: #333 !important;
-  }
-
-  .menu__button-1 {
-    width: 100%;
-  }
-
-  .menu__button-2 {
-    width: 100%;
   }
 
   .menu__body {
@@ -749,36 +725,9 @@ body._lock {
     color: #cd1319;
   }
 }
-
-@media (min-width: 1200px) and (max-width: 1399px) {
-  .menu__button-1 {
-    font-size: 13px;
-  }
-
-  .menu__button-2 {
-    font-size: 13px;
-  }
-}
-
-@media (min-width: 1400px) and (max-width: 1799px) {
-  .menu__button-1 {
-    font-size: 13px;
-  }
-
-  .menu__button-2 {
-    font-size: 13px;
-  }
-}
 @supports (-webkit-appearance:none){
 .main_bg{background-image:url(../../img/index/main-bg.webp)}
-}
-
- @media (max-width: 1699px){
-
-@supports (-webkit-appearance:none){
-
-}
-
+.main-photo{background-image:url(../../img/index/main_man.webp)}
 }
 
  @media (max-width: 1399px){
@@ -790,22 +739,6 @@ body._lock {
 }
 
  @media (max-width: 1199px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media (min-width: 1200px) and (max-width: 1399px){
-
-@supports (-webkit-appearance:none){
-
-}
-
-}
-
- @media (min-width: 1400px) and (max-width: 1799px){
 
 @supports (-webkit-appearance:none){
 
