--- a/#src/plugins/swiper/style/slider_home.css
+++ b/#src/plugins/swiper/style/slider_home.css
@@ -169,7 +169,7 @@
 /*-------- Swiper -------*/
 
 :root {
-    --swiper-navigation-size: 20px;
+    --swiper-navigation-size: 14px;
     --swiper-theme-color: #fff;
     --swiper-navigation-color: var(--swiper-theme-color);
 }
@@ -177,7 +177,7 @@
 .swiper-button-prev,
 .swiper-button-next {
     position: absolute;
-    top: 85%;
+    top: 50%;
     width: calc(var(--swiper-navigation-size) / 44 * 27);
     height: var(--swiper-navigation-size);
     margin-top: calc(0px - (var(--swiper-navigation-size) / 2));
@@ -187,6 +187,10 @@
     align-items: center;
     justify-content: center;
     color: var(--swiper-navigation-color, var(--swiper-theme-color));
+    padding: 35px;
+    background: linear-gradient(129.54deg, #FF7B4E 15.57%, #FF584E 95.03%), #8B8B8B;
+    border-radius: 50px;
+    font-size: 20px;
 }
 
 .swiper-button-prev.swiper-button-disabled,
@@ -204,18 +208,19 @@
     letter-spacing: 0;
     text-transform: none;
     font-variant: initial;
-    line-height: 1;
+    line-height: 1px;
 }
 
 .swiper-button-prev,
 .swiper-container-rtl .swiper-button-next {
-    left: 45%;
+    left: 3%;
     right: 10px;
 }
 
 .swiper-button-prev:after,
 .swiper-container-rtl .swiper-button-next:after {
     content: 'prev';
+    height: 2px;
 }
 
 .swiper-button-next,
