--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -169,8 +169,9 @@ body {
   &__container {
         display: flex;
     background-color: #e5e5e5;
-    padding: 0 100px;
+    padding: 0 0 0 100px;
     padding-bottom: 100px;
+    overflow: hidden;
   }
 }
 
@@ -227,4 +228,10 @@ line-height: 30px;
 color: #FEFEFE;
     }
   }
+}
+
+
+.__container-swiper{
+    margin-top: 110px;
+    max-width: 1408px;
 }
