--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -65,6 +65,7 @@ body {
 
 /*-------- All End -------*/
 
+/*-------- Main Start -------*/
 .main {
   background-color: #e5e5e5;
   height: 100vh;
@@ -161,13 +162,15 @@ body {
 
   background: 50% 0;
 }
+/*-------- Main End -------*/
 
+/*-------- Slider Start -------*/
 .slider {
   &__info {
     flex: 0 0 60%;
   }
   &__container {
-        display: flex;
+    display: flex;
     background-color: #e5e5e5;
     padding: 0 0 0 100px;
     padding-bottom: 100px;
@@ -178,7 +181,7 @@ body {
 .info {
   flex: 0 0 40%;
   &__title {
-       display: flex;
+    display: flex;
     font-family: Poppins;
     font-style: normal;
     font-weight: 600;
@@ -200,13 +203,13 @@ body {
   }
 
   &__sup-title {
-       font-family: Poppins;
+    font-family: Poppins;
     font-style: normal;
     font-weight: 500;
     font-size: 25px;
     line-height: 37px;
     color: #0f1f1c;
-    opacity: .5;
+    opacity: 0.5;
     margin-top: 17px;
     letter-spacing: 0px;
   }
@@ -220,18 +223,137 @@ body {
     justify-content: center;
     margin-top: 61px;
     & a {
-     font-family: Poppins;
-font-style: normal;
-font-weight: 600;
-font-size: 20px;
-line-height: 30px;
-color: #FEFEFE;
+      font-family: Poppins;
+      font-style: normal;
+      font-weight: 600;
+      font-size: 20px;
+      line-height: 30px;
+      color: #fefefe;
     }
   }
 }
 
-
-.__container-swiper{
-    margin-top: 110px;
-    max-width: 1408px;
+.__container-swiper {
+  margin-top: 110px;
+  max-width: 1408px;
 }
+
+/*-------- Slider End -------*/
+
+/*-------- Tourists Start -------*/
+.reviews-tourists {
+  background-color: #e5e5e5;
+  display: flex;
+  column-gap: 68px;
+  &__container {
+    padding: 143px 100px;
+  }
+  &__photo {
+    flex: 0 0 38.5%;
+  }
+  &__img {
+    width: 100%;
+  }
+  &__info {
+    flex: 0 0 61.5%;
+  }
+  &__title {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 45px;
+    line-height: 67px;
+    color: #0f1f1c;
+  }
+  &__user-info {
+    margin-top: 38px;
+    display: flex;
+    column-gap: 33px;
+  }
+  &__logo {
+  }
+  &__info-user {
+    margin-top: 20px;
+  }
+  &__name {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 33px;
+    line-height: 49px;
+    color: #0f1f1c;
+  }
+  &__geo {
+    font-family: Poppins;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 25px;
+    line-height: 37px;
+    color: #0f1f1c;
+    opacity: 0.5;
+    margin-top: 10px;
+  }
+  &__subtitle {
+       font-family: Poppins;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 22px;
+    line-height: 33px;
+    color: #0f1f1c;
+    opacity: .5;
+    letter-spacing: 1px;
+    margin-top: 48px;
+  }
+  &__rating-area {
+    margin-top: 20px;
+  }
+}
+
+.rating-area {
+  overflow: hidden;
+  width: 335px;
+}
+.rating-area:not(:checked) > input {
+  display: none;
+}
+.rating-area:not(:checked) > label {
+    float: right;
+    width: 67px;
+    padding: 0;
+    cursor: pointer;
+    font-size: 69px;
+    line-height: 69px;
+    color: #d3d3d3;
+    text-shadow: 1px 1px #bbb;
+}
+.rating-area:not(:checked) > label:before {
+  content: "★";
+}
+.rating-area > input:checked ~ label {
+  color: gold;
+  text-shadow: 1px 1px #c60;
+}
+.rating-area:not(:checked) > label:hover,
+.rating-area:not(:checked) > label:hover ~ label {
+  color: gold;
+}
+.rating-area > input:checked + label:hover,
+.rating-area > input:checked + label:hover ~ label,
+.rating-area > input:checked ~ label:hover,
+.rating-area > input:checked ~ label:hover ~ label,
+.rating-area > label:hover ~ input:checked ~ label {
+  color: gold;
+  text-shadow: 1px 1px goldenrod;
+}
+.rate-area > label:active {
+  position: relative;
+}
+/*-------- Tourists End -------*/
+
+/*-------- Exploring Start -------*/
+
+/*-------- Exploring End -------*/
+
+/*-------- Subcripe Start -------*/
+
+/*-------- Subcripe End -------*/
