--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -197,6 +197,8 @@ body {
 
 /*-------- All End -------*/
 
+/*-------- Main Start -------*/
+
 .main {
   background-color: #e5e5e5;
   height: 100vh;
@@ -485,6 +487,10 @@ body._lock {
   background: 50% 0;
 }
 
+/*-------- Main End -------*/
+
+/*-------- Slider Start -------*/
+
 .slider__info {
   flex: 0 0 60%;
 }
@@ -530,7 +536,7 @@ body._lock {
   font-size: 25px;
   line-height: 37px;
   color: #0f1f1c;
-  opacity: .5;
+  opacity: 0.5;
   margin-top: 17px;
   letter-spacing: 0px;
 }
@@ -552,13 +558,153 @@ body._lock {
   font-weight: 600;
   font-size: 20px;
   line-height: 30px;
-  color: #FEFEFE;
+  color: #fefefe;
 }
 
 .__container-swiper {
   margin-top: 110px;
   max-width: 1408px;
 }
+
+/*-------- Slider End -------*/
+
+/*-------- Tourists Start -------*/
+
+.reviews-tourists {
+  background-color: #e5e5e5;
+  display: flex;
+  -moz-column-gap: 68px;
+  column-gap: 68px;
+}
+
+.reviews-tourists__container {
+  padding: 143px 100px;
+}
+
+.reviews-tourists__photo {
+  flex: 0 0 38.5%;
+}
+
+.reviews-tourists__img {
+  width: 100%;
+}
+
+.reviews-tourists__info {
+  flex: 0 0 61.5%;
+}
+
+.reviews-tourists__title {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 45px;
+  line-height: 67px;
+  color: #0f1f1c;
+}
+
+.reviews-tourists__user-info {
+  margin-top: 38px;
+  display: flex;
+  -moz-column-gap: 33px;
+  column-gap: 33px;
+}
+
+.reviews-tourists__info-user {
+  margin-top: 20px;
+}
+
+.reviews-tourists__name {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 33px;
+  line-height: 49px;
+  color: #0f1f1c;
+}
+
+.reviews-tourists__geo {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 25px;
+  line-height: 37px;
+  color: #0f1f1c;
+  opacity: 0.5;
+  margin-top: 10px;
+}
+
+.reviews-tourists__subtitle {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 22px;
+  line-height: 33px;
+  color: #0f1f1c;
+  opacity: .5;
+  letter-spacing: 1px;
+  margin-top: 48px;
+}
+
+.reviews-tourists__rating-area {
+  margin-top: 20px;
+}
+
+.rating-area {
+  overflow: hidden;
+  width: 335px;
+}
+
+.rating-area:not(:checked) > input {
+  display: none;
+}
+
+.rating-area:not(:checked) > label {
+  float: right;
+  width: 67px;
+  padding: 0;
+  cursor: pointer;
+  font-size: 69px;
+  line-height: 69px;
+  color: #d3d3d3;
+  text-shadow: 1px 1px #bbb;
+}
+
+.rating-area:not(:checked) > label:before {
+  content: "★";
+}
+
+.rating-area > input:checked ~ label {
+  color: gold;
+  text-shadow: 1px 1px #c60;
+}
+
+.rating-area:not(:checked) > label:hover,
+.rating-area:not(:checked) > label:hover ~ label {
+  color: gold;
+}
+
+.rating-area > input:checked + label:hover,
+.rating-area > input:checked + label:hover ~ label,
+.rating-area > input:checked ~ label:hover,
+.rating-area > input:checked ~ label:hover ~ label,
+.rating-area > label:hover ~ input:checked ~ label {
+  color: gold;
+  text-shadow: 1px 1px goldenrod;
+}
+
+.rate-area > label:active {
+  position: relative;
+}
+
+/*-------- Tourists End -------*/
+
+/*-------- Exploring Start -------*/
+
+/*-------- Exploring End -------*/
+
+/*-------- Subcripe Start -------*/
+
+/*-------- Subcripe End -------*/
 
 @media (max-width: 1399px) {
   .menu__list-link-login {
