--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -735,7 +735,7 @@ body._lock {
   font-size: 30px;
   line-height: 45px;
   color: #0f1f1c;
-  opacity: .5;
+  opacity: 0.5;
   margin-top: 33px;
 }
 
@@ -762,6 +762,98 @@ body._lock {
 /*-------- Exploring End -------*/
 
 /*-------- Subcripe Start -------*/
+
+.subscripe {
+  background-color: #e5e5e5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.subscripe__container {
+  padding: 21px 106px 106px 106px;
+}
+
+.subscripe__title {
+  width: 494px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 55px;
+  line-height: 82px;
+  text-align: center;
+  color: #0f1f1c;
+}
+
+.subscripe__block {
+  width: 800px;
+  background: linear-gradient(0deg, #ffffff, #ffffff), #c4c4c4;
+  border-radius: 35px;
+  padding: 12px 15px 12px 46px;
+  display: flex;
+  justify-content: space-between;
+  margin-top: 60px;
+}
+
+.subscripe__input {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #000;
+  opacity: 0.5;
+}
+
+.subscripe__input::-moz-placeholder {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #0f1f1c;
+  opacity: 0.5;
+}
+
+.subscripe__input:-ms-input-placeholder {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #0f1f1c;
+  opacity: 0.5;
+}
+
+.subscripe__input::placeholder {
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 36px;
+  color: #0f1f1c;
+  opacity: 0.5;
+}
+
+.subscripe__input:hover {
+  cursor: pointer;
+}
+
+.subscripe__button {
+  width: 300px;
+  height: 105px;
+  left: 805px;
+  top: 3416px;
+  background: linear-gradient(129.54deg, #ff7b4e 15.57%, #ff584e 95.03%), #ffffff;
+  border-radius: 35px;
+  font-family: Poppins;
+  font-style: normal;
+  font-weight: 600;
+  font-size: 25px;
+  line-height: 37px;
+  color: #ffffff;
+}
 
 /*-------- Subcripe End -------*/
 
