--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -15,7 +15,6 @@
 @import "_vars";
 
 // @import "../css/_style_header";
-// @import "../css/_style_footer";
 
 /*-------- Page Index Start -------*/
 /*-------- All Start -------*/
@@ -475,3 +474,5 @@ body {
 }
 
 /*-------- Subcripe End -------*/
+
+@import "footer/_style_footer";
