--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -72,7 +72,7 @@ body {
 
 .main_bg {
   width: 1440px;
-  background-image: url(../../img/index/main-bg.png);
+  background-image: url(../img/index/main-bg.png);
   background-repeat: no-repeat;
   height: 100vh;
   position: absolute;
@@ -154,7 +154,7 @@ body {
   top: 0;
   left: 450px;
   z-index: 1;
-  background-image: url(../../img/index/main_man.png);
+  background-image: url(../img/index/main_man.png);
   height: 99%;
   width: 65%;
   background-repeat: no-repeat;
