--- a/go-trip/css/style.css
+++ b/go-trip/css/style.css
@@ -206,7 +206,7 @@ body {
 
 .main_bg {
   width: 1440px;
-  background-image: url(../../img/index/main-bg.png);
+  background-image: url(../img/index/main-bg.png);
   background-repeat: no-repeat;
   height: 100vh;
   position: absolute;
@@ -480,7 +480,7 @@ body._lock {
   top: 0;
   left: 450px;
   z-index: 1;
-  background-image: url(../../img/index/main_man.png);
+  background-image: url(../img/index/main_man.png);
   height: 99%;
   width: 65%;
   background-repeat: no-repeat;
@@ -1090,8 +1090,8 @@ body._lock {
   }
 }
 @supports (-webkit-appearance:none){
-.main_bg{background-image:url(../../img/index/main-bg.webp)}
-.main-photo{background-image:url(../../img/index/main_man.webp)}
+.main_bg{background-image:url(../img/index/main-bg.webp)}
+.main-photo{background-image:url(../img/index/main_man.webp)}
 }
 
  @media (max-width: 1399px){
