--- a/#src/style/scss/header/_style_header.scss
+++ b/#src/style/scss/header/_style_header.scss
@@ -13,9 +13,8 @@ body._lock {
 }
 
 .header {
-  position: static;
-  top: 0;
-  left: 0;
+  max-width: 1440px;
+  position: absolute;
   width: 100%;
   z-index: 10;
   background-color: var(--header-bg-color);
