--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -80,6 +80,61 @@ body {
   }
 }
 
+.eclipse-scene {
+  &__main-1 {
+    left: 48.5%;
+    top: 18.5%;
+  }
+  &__main-2 {
+    right: 6%;
+    top: 76%;
+  }
+
+  &__main-3 {
+    right: 6%;
+    top: 10%;
+  }
+  
+  position: absolute;
+  z-index: 3;
+
+  &__big {
+    position: relative;
+    left: -1px;
+  }
+  &__middle {
+    position: relative;
+    top: 8px;
+    left: -1px;
+  }
+  &__little {
+    position: relative;
+    top: -30px;
+    left: 29px;
+  }
+}
+
+.wawe-scene {
+  position: absolute;
+  z-index: 3;
+  &__one-scene {
+    bottom: 5.1%;
+    left: 49.5%;
+  }
+   &__two-scene {
+    top: 24.5%;
+    right: 11.8%;
+  }
+  &__one {
+    position: relative;
+  }
+  &__two {
+    position: relative;
+    left: 80px;
+    top: -30px
+  }
+}
+
 @import "_vars";
 @import "header/_style_header";
 
@@ -364,6 +419,7 @@ body {
     padding: 102px 102px 130px 102px;
     align-items: center;
     justify-content: center;
+    position: relative;
   }
   &__title {
     width: 519px;
