Fix parallax for main-scene and rebuild gulp(delete trash photo)

--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -213,7 +213,10 @@ body {
 
   &__photo {
     flex: 0 0 50%;
-    left: 57% !important;
+    user-select: none;
+  }
+  &__human {
+    left: 5%!important;
   }
 }
 
