Add .bg-triangle-left and .bg-triangle-right

--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -164,6 +164,28 @@ body {
   }
 }
 
+.bg-triangle-left{
+    position: absolute;
+    z-index: 4;
+    left: 0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-bottom: 136px solid #e5e5e5;
+    border-right: 660px solid transparent;
+}
+
+.bg-triangle-right{
+    position: absolute;
+    z-index: 4;
+    right: 0;
+    bottom: 0;
+    width: 0;
+    height: 0;
+    border-bottom: 136px solid #e5e5e5;
+    border-left: 660px solid transparent;
+}
+
 @import "_vars";
 @import "header/_style_header";
 
