--- a/#src/style/scss/style.scss
+++ b/#src/style/scss/style.scss
@@ -482,7 +482,7 @@ body {
     font-weight: 500;
     font-size: 45px;
     line-height: 67px;
-
+    text-align: center;
     color: #0f1f1c;
   }
   &__subtitle {
